--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.18.3",
         "express": "^4.16.3",
+        "express-fileupload": "^0.4.0",
         "jsonwebtoken": "^8.3.0",
-        "mongoose": "^5.2.10",
-        "mongoose-unique-validator": "^2.0.1"
+        "mongoose": "^5.2.8",
+        "mongoose-unique-validator": "^2.0.1",
+        "serve-index": "^1.9.1"
     },
     "devDependencies": {
         "nodemon": "^1.18.3"
