--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.18.3",
+        "cors": "^2.8.4",
         "express": "^4.16.3",
         "express-fileupload": "^0.4.0",
+        "google-auth-library": "^2.0.0",
         "jsonwebtoken": "^8.3.0",
         "mongoose": "^5.2.8",
         "mongoose-unique-validator": "^2.0.1",
